<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/event_image"
                android:layout_width="120dp"
                android:layout_height="90dp"/>
            <Button
                android:id="@+id/select_image_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/event_image"
                android:text="@string/image_selection"
                android:textStyle="bold"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/event_name_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name_hint"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/event_location_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/event_description_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description_hint"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TimePicker
                android:id="@+id/tp_timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:scaleX="1"
                android:scaleY="1"
                android:timePickerMode="spinner"/>

            <DatePicker
                android:id="@+id/dp_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tp_timepicker"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:datePickerMode="calendar"
                android:headerBackground="@color/colorPrimaryDark"
                android:scaleX="1"
                android:scaleY="1"/>
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next_button"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/next_button"/>

    </LinearLayout>
</ScrollView>
