<resources>
    <string name="app_name">eventU</string>
    <string name="eventu_logo">eventU_logo</string>

    <!-- Strings related to login -->
    <string name="start_page_log_in">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_club_name">Club Name</string>
    <string name="enter_school">Enter School</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="club">Club</string>
    <string name="student">Student</string>

    <!-- Error Messages to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_not_verified">Email not verified, new verification email sent</string>
    <string name="error_no_email_domain_match">This email address is invalid for this school
    </string>
    <string name="error_wrong_password">This password is incorrect</string>
    <string name="error_password_short">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_exists">This email already exists</string>
    <string name="error_email_not_exists">This email does not exist</string>
    <string name="error_log_in_failed">Log in failed</string>
    <string name="error_register_failed">Registration Failed</string>

    <string name="title_activity_login">Log in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="error_reset_password">Error sending reset password email</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_logout">Log out</string>
    <string name="logout_confirmation">"Are you sure you want to log out?"</string>

    <!-- Strings related to Event Creation -->
    <string name="title_activity_create_event">Create Event</string>
    <string name="event_name">EventName</string>
    <string name="event_creator">EventCreator</string>
    <string name="event_location">EventLocation</string>
    <string name="event_description">EventDescription</string>

    <string name="event_name_hint">Event Name</string>
    <string name="event_location_hint">Event Location</string>
    <string name="event_description_hint">Event Description</string>

    <string name="event_tally">EventTally</string>
    <string name="clubID">clubID</string>
    <string name="event_date">EventDate</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_calendar">Calendar</string>
    <string name="confirm">Confirm</string>
    <string name="event_image">"Event Image"</string>
    <string name="favorite_star">Favorite Star</string>
    <string name="more_actions">More Actions</string>
    <string name="menu_refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="error_timepicker">Time cannot be in the past</string>
    <string name="image_selection">Select Image</string>

    <string name="home_page">HomePage</string>
    <string name="club_description">Club Description</string>
    <string name="social_media">Social Media Links</string>
    <string name="contact_info">Contact Information</string>
    <string name="description">Description</string>
    <string name="edit_button">Edit</string>
    <string name="club_profile_page">Club Profile Page</string>
    <string name="links">links</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>

    <!-- Strings related to Timeline popup_menu.xml -->
    <string name="send_message">Send Message</string>
    <string name="report">Report</string>
    <string name="edit_event">Edit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="USER_PREFS_FILE">USER_PREFS_FILE</string>
    <string name="RememberAccess">RememberAccess</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="remember_me">Remember me on this device</string>
</resources>