<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventu.DisplayClubPageActivity">

    <TextView
        android:id="@+id/display_club_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/club_profile_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:id="@+id/display_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_club_name"
        android:layout_marginStart="5dp"
        android:text="@string/club_description"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/display_club_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_description"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:textColor="@android:color/black"
        tools:text="This is an example test, none of the text is visible during run-time. Useful to show how much text the description will take up"/>
    <TextView
        android:id="@+id/display_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_club_description"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:text="@string/links"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/display_club_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_links"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:textColor="@android:color/black"
        tools:text="Links for Club Pages"/>
    <TextView
        android:id="@+id/display_media_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_club_links"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:text="@string/social_media"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/display_club_links"/>
    <EditText
        android:id="@+id/display_club_media_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_media_links"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/display_media_links"
        tools:text="Facebook\nTwitter\nReddit\nInstagram\n4Chan"/>
    <TextView
        android:id="@+id/display_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_club_media_links"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:text="@string/contact_info"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/display_club_media_links"/>
    <EditText
        android:id="@+id/display_club_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/display_contact_info"
        android:layout_below="@+id/display_contact_info"
        android:enabled="false"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/display_contact_info"
        tools:text="Phone Number: 123-456-8790\nLocation: 110 8th St Troy NY"/>
    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/edit"
        android:visibility="invisible"/>
</RelativeLayout>
